theme/css/custom-style.css
.content a { text-decoration: none; font-weight: bold;}
.content img, .content video {
    max-width: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.content img:hover {
    box-shadow: 0 0 8px 4px var(--table-header-bg);
}
.content figcaption {
    text-align: center;
}

kbd {
    border-radius: 3px;
    padding: 0.1em 0.3em;
    border: 1px solid var(--table-header-bg);
    font-size: 0.875em;
}

#menu-bar.bordered {
    background-color: hsla(var(--bg), 0.7);
    backdrop-filter: blur(10px);
}

